[MODIFY} rollback removed endpoint
