# handler/endpoints.go
@@ -2,6 +2,7 @@ package handler
 
 import (
 	"database/sql"
+	"fmt"
 	"math"
 	"net/http"
 
@@ -10,6 +11,14 @@ import (
 	"github.com/naufalfmm/plantation-drone-api/generated"
 	"github.com/naufalfmm/plantation-drone-api/repository"
 )
+
+// This is just a test endpoint to get you started. Please delete this endpoint.
+// (GET /hello)
+func (s *Server) GetHello(ctx echo.Context, params generated.GetHelloParams) error {
+	var resp generated.HelloResponse
+	resp.Message = fmt.Sprintf("Hello User %d", params.Id)
+	return ctx.JSON(http.StatusOK, resp)
+}
 
 // (POST /estate)
 func (s *Server) PostEstate(ctx echo.Context) error {
